Fix tooltip appearing on mobile

--- a/src/pages/resume/resume.module.scss
+++ b/src/pages/resume/resume.module.scss
@@ -140,37 +140,36 @@ $edit-button-margin: 15px;
     transition: opacity 0.3s;
 
     
-    @media (min-width: $tablet-size) {
-      &::after {
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: 100%;
-        margin-top: -5px;
-        border-width: 5px;
-        border-style: solid;
-        border-color: transparent transparent transparent #555;
-      }
+    &::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 100%;
+      margin-top: -5px;
+      border-width: 5px;
+      border-style: solid;
+      border-color: transparent transparent transparent #555;
     }
   }
 
-  &:hover{
-    background-color: rgb(221, 255, 221);
-
-    .downloadTooltipText {
-      visibility: visible;
-      opacity: 1;
-
-      &.opened {
-        visibility: hidden;
-        opacity: 0;
-        transition: opacity 0.3s;
-      }
-    }
-  }
 
   @media (min-width: $tablet-size) {
     right: calc($page-padding-sides / 4);
+    
+    &:hover{
+      background-color: rgb(221, 255, 221);
+  
+      .downloadTooltipText {
+        visibility: visible;
+        opacity: 1;
+  
+        &.opened {
+          visibility: hidden;
+          opacity: 0;
+          transition: opacity 0.3s;
+        }
+      }
+    }
   }
 }
 
